# oguri

./: .gitignore  README.md  pyproject.toml
src/: command_job.py  job.py  test.py  util.py
src/oguri/: async_job.py  command_job.py  job.py  util.py
test/: async.py  serial.py
