[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "oguri"
version = "0.0.1"
authors = [
  { name="Justin Garrigus", email="justin.m.garrigus@gmail.com" },
]
description = "Asynchronous and extensible job management utility"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Linux",
]
license = "Unlicense"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/justinmgarrigus/oguri"
Issues = "https://github.com/justinmgarrigus/oguri/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["oguri*"]
